feat: release files from Darkosto

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ src/config/worldstripper-common.toml
 # Client configs
 # These are ones we feel the user should be customizing, not us.
 src/config/jei/bookmarks.ini
+
+# Mod Junk
+src/config/byg/README.txt
