--- a/src/config/jei/recipe-category-sort-order.ini
+++ b/src/config/jei/recipe-category-sort-order.ini
@@ -37,3 +37,6 @@ thermal:smelter
 thermal:smelter_catalyst
 thermal:stirling_fuel
 ediblebugs:frying
+silentgear:category/gear_crafting
+silentgear:grading
+silentgear:salvaging
