--- a/src/config/jei/ingredient-list-mod-sort-order.ini
+++ b/src/config/jei/ingredient-list-mod-sort-order.ini
@@ -18,11 +18,9 @@ CoFH Core
 Eyes in the Darkness
 Jumbo Furnace
 Pane In The Glass
-Tetra
 The Undergarden
 Thermal Series
 Wall-Jump!
-Hornets
 Spice of Life: Carrot Edition
 The Veggie Way
 Goopers
@@ -31,3 +29,10 @@ Artifacts
 Comforts
 Curios API
 Edible Bugs
+Better Shields
+Rough Tweaks
+Simple Absorption
+Candidate
+Hornets
+Metal Barrels
+Silent Gear
