--- a/src/config/repurposed_structures-mineshafts.toml
+++ b/src/config/repurposed_structures-mineshafts.toml
@@ -5,7 +5,7 @@
 	lootChestsMS = true
 	#
 	# Add the custom Mineshafts to modded biomes of the same categories/type.
-	addMineshaftsToModdedBiomes = true
+	addMineshaftsToModdedBiomes = false
 	#
 	# Add the ID/resource location of the biome you don't want
 	# RS's mineshafts to spawn in. Separate each ID with a comma ,
@@ -19,49 +19,49 @@
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		# Setting this to below min height config will make mineshaft spawn only at min height.
 		#Range: 5 ~ 255
-		endMineshaftMaxHeight = 37
+		endMineshaftMaxHeight = 110
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 45.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		# Setting this to below min height config will make mineshaft spawn only at min height.
 		#Range: 5 ~ 255
-		desertMineshaftMaxHeight = 45
+		desertMineshaftMaxHeight = 110
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 45.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		# Setting this to below min height config will make mineshaft spawn only at min height.
 		#Range: 5 ~ 255
-		taigaMineshaftMaxHeight = 45
+		taigaMineshaftMaxHeight = 110
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 45.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		# Setting this to below min height config will make mineshaft spawn only at min height.
 		#Range: 5 ~ 255
-		swampAndDarkForestMineshaftMaxHeight = 45
+		swampAndDarkForestMineshaftMaxHeight = 110
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 45.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		# Setting this to below min height config will make mineshaft spawn only at min height.
 		#Range: 5 ~ 255
-		stoneMineshaftMaxHeight = 45
+		stoneMineshaftMaxHeight = 110
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 45.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		# Setting this to below min height config will make mineshaft spawn only at min height.
 		#Range: 5 ~ 255
-		icyMineshaftMaxHeight = 45
+		icyMineshaftMaxHeight = 110
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 25.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		# Setting this to below min height config will make mineshaft spawn only at min height.
 		#Range: 5 ~ 255
-		oceanMineshaftMaxHeight = 25
+		oceanMineshaftMaxHeight = 110
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 45.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		# Setting this to below min height config will make mineshaft spawn only at min height.
 		#Range: 5 ~ 255
-		birchMineshaftMaxHeight = 45
+		birchMineshaftMaxHeight = 110
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 13.
 		# Note: The mineshaft will spawn between min and max y height set in config.
@@ -73,13 +73,13 @@
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		# Setting this to below min height config will make mineshaft spawn only at min height.
 		#Range: 5 ~ 255
-		jungleMineshaftMaxHeight = 45
+		jungleMineshaftMaxHeight = 110
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 45.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		# Setting this to below min height config will make mineshaft spawn only at min height.
 		#Range: 5 ~ 255
-		savannaMineshaftMaxHeight = 45
+		savannaMineshaftMaxHeight = 110
 
 	[Mineshaft.Misc]
 		#
@@ -98,25 +98,25 @@
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		#
 		#Range: 5 ~ 255
-		oceanMineshaftMinHeight = 8
+		oceanMineshaftMinHeight = 200
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 8.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		#
 		#Range: 5 ~ 255
-		savannaMineshaftMinHeight = 8
+		savannaMineshaftMinHeight = 200
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 8.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		#
 		#Range: 5 ~ 255
-		icyMineshaftMinHeight = 8
+		icyMineshaftMinHeight = 200
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 8.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		#
 		#Range: 5 ~ 255
-		jungleMineshaftMinHeight = 8
+		jungleMineshaftMinHeight = 200
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 30.
 		# Note: The mineshaft will spawn between min and max y height set in config.
@@ -128,31 +128,31 @@
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		# Setting this to below min height config will make mineshaft spawn only at min height.
 		#Range: 5 ~ 255
-		birchMineshaftMinHeight = 8
+		birchMineshaftMinHeight = 200
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 8.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		#
 		#Range: 5 ~ 255
-		stoneMineshaftMinHeight = 8
+		stoneMineshaftMinHeight = 200
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 8.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		#
 		#Range: 5 ~ 255
-		desertMineshaftMinHeight = 8
+		desertMineshaftMinHeight = 200
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 8.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		#
 		#Range: 5 ~ 255
-		taigaMineshaftMinHeight = 8
+		taigaMineshaftMinHeight = 200
 		#
 		# Minimum Y height that this mineshaft can spawn at. Default is 8.
 		# Note: The mineshaft will spawn between min and max y height set in config.
 		#
 		#Range: 5 ~ 255
-		swampAndDarkForestMineshaftMinHeight = 8
+		swampAndDarkForestMineshaftMinHeight = 200
 
 	[Mineshaft.Spawnrate]
 		#
@@ -161,67 +161,67 @@
 		# Replace Mineshafts in Swamps and Dark Forests with a swampy/dark oak themed Mineshaft.
 		# Note: Vanilla Mineshafts will start spawning when this is set to 0 and game is restarted.
 		#Range: 0 ~ 1000
-		swampAndDarkForestMineshaftSpawnrate = 40
+		swampAndDarkForestMineshaftSpawnrate = 0
 		#
 		# Controls how often Mineshafts will spawn. 1000 is max spawnrate.
 		# 
 		# Replace Mineshafts in Jungle biomes with a Jungle themed Mineshaft.
 		# Note: Vanilla Mineshafts will start spawning when this is set to 0 and game is restarted.
 		#Range: 0 ~ 1000
-		jungleMineshaftSpawnrate = 40
+		jungleMineshaftSpawnrate = 0
 		#
 		# Controls how often Mineshafts will spawn. 1000 is max spawnrate.
 		# 
 		# Replace Mineshafts in Taiga biomes with a Taiga themed Mineshaft. Note: Vanilla Mineshafts will start spawning when this is set to 0 and game is restarted.
 		#Range: 0 ~ 1000
-		taigaMineshaftSpawnrate = 40
+		taigaMineshaftSpawnrate = 0
 		#
 		# Controls how often Mineshafts will spawn. 1000 is max spawnrate.
 		# 
 		# Replace Mineshafts in Birch biomes with a Birch themed Mineshaft.
 		# Note: Vanilla Mineshafts will start spawning when this is set to 0 and game is restarted.
 		#Range: 0 ~ 1000
-		birchMineshaftSpawnrate = 40
+		birchMineshaftSpawnrate = 0
 		#
 		# Controls how often Mineshafts will spawn.
 		# 
 		# Add Nether themed Mineshafts to Nether biomes.0 for no Mineshafts and 1000 for max spawnrate.
 		#Range: 0 ~ 1000
-		netherMineshaftSpawnrate = 40
+		netherMineshaftSpawnrate = 0
 		#
 		# Controls how often Mineshafts will spawn. 1000 is max spawnrate.
 		# 
 		# Replace Mineshafts in Desert biomes with a Desert themed Mineshaft.
 		# Note: Vanilla Mineshafts will start spawning when this is set to 0 and game is restarted.
 		#Range: 0 ~ 1000
-		desertMineshaftSpawnrate = 40
+		desertMineshaftSpawnrate = 0
 		#
 		# Controls how often Mineshafts will spawn. 1000 is max spawnrate.
 		# 
 		# Replace Mineshafts in Ocean biomes with an Ocean themed Mineshaft.
 		# Note: Vanilla Mineshafts will start spawning when this is set to 0 and game is restarted.
 		#Range: 0 ~ 1000
-		oceanMineshaftSpawnrate = 40
+		oceanMineshaftSpawnrate = 0
 		#
 		# Controls how often Mineshafts will spawn. 1000 is max spawnrate.
 		# 
 		# Replace Mineshafts in Savanna biomes with a Savanna themed Mineshaft.
 		# Note: Vanilla Mineshafts will start spawning when this is set to 0 and game is restarted.
 		#Range: 0 ~ 1000
-		savannaMineshaftSpawnrate = 40
+		savannaMineshaftSpawnrate = 0
 		#
 		# Controls how often Mineshafts will spawn.
 		# 
 		# Add End themed Mineshafts to End biomes outside the Enderdragon island.0 for no Mineshafts and 1000 for max spawnrate.
 		#Range: 0 ~ 1000
-		endMineshaftSpawnrate = 40
+		endMineshaftSpawnrate = 0
 		#
 		# Controls how often Mineshafts will spawn. 1000 is max spawnrate.
 		# 
 		# Replace Mineshafts in Mountain (Extreme Hills) biomes with a Stone themed Mineshaft.
 		# Note: Vanilla Mineshafts will start spawning when this is set to 0 and game is restarted.
 		#Range: 0 ~ 1000
-		stoneMineshaftSpawnrate = 40
+		stoneMineshaftSpawnrate = 0
 		#
 		# Controls how often Mineshafts will spawn. 1000 is max spawnrate.
 		# 
@@ -229,5 +229,5 @@
 		# Note: Snowy Taiga Biomes will get Ice Mineshaft instead of Taiga theme.
 		# Note: Vanilla Mineshafts will start spawning when this is set to 0 and game is restarted.
 		#Range: 0 ~ 1000
-		icyMineshaftSpawnrate = 40
+		icyMineshaftSpawnrate = 0
 
