feat: 1.0.1 release from Darkosto
Co-authored-by: Darkosto <darkostotv@gmail.com>

--- a/src/config/jei/ingredient-list-mod-sort-order.ini
+++ b/src/config/jei/ingredient-list-mod-sort-order.ini
@@ -3,14 +3,12 @@ Dire Goo
 FastFurnace
 FastWorkbench
 Nature's Compass
-Oh The Biomes You'll Go
 PackedUp
 Powah
 Waddles
 The One Probe
 Fruit Trees
 Macaw's Bridges
-Mining Helmet
 Pickle Tweaks
 Platforms
 Simple Farming
@@ -25,14 +23,20 @@ Spice of Life: Carrot Edition
 The Veggie Way
 Goopers
 Wildfires
-Artifacts
-Comforts
 Curios API
 Edible Bugs
-Better Shields
 Rough Tweaks
 Simple Absorption
-Candidate
 Hornets
 Metal Barrels
 Silent Gear
+Artifacts
+Better Shields
+Comforts
+Mining Helmet
+Oh The Biomes You'll Go
+Dungeons Gear
+Enchant With Mob
+Gateways To Eternity
+Wither Skeleton Tweaks
+Chunk Loaders
