--- a/src/config/cofh_core-client.toml
+++ b/src/config/cofh_core-client.toml
@@ -3,7 +3,7 @@
 	#If TRUE, Item descriptions will be added to their tooltips if possible.
 	"Show Item Descriptions" = true
 	#If TRUE, Enchantment descriptions will be added to the tooltip for Enchanted Books containing only a single enchantment.
-	"Show Enchantment Descriptions" = true
+	"Show Enchantment Descriptions" = false
 
 [Render]
 	#If TRUE, Area Effect Block breaking will be rendered. Disable if you are using buggy mods such as OptiFine which apparently with this. Please also report the issue to OptiFine.
