--- a/src/config/repurposed_structures-dungeons.toml
+++ b/src/config/repurposed_structures-dungeons.toml
@@ -124,78 +124,78 @@
 		#Range: 2 ~ 255
 		jungleDungeonMinHeight = 2
 
-	[Dungeons.Spawnrate]
+	[Dungeons.AttemptsPerChunk]
 		#
 		# Replace vanilla dungeon in Jungle biomes with Jungle themed dungeon.
 		# How often dungeons will attempt to spawn per chunk.
 		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
 		# Note: Vanilla Dungeons will spawn again when this is set to 0.
 		#Range: 0 ~ 1000
-		jungleDungeonSpawnrate = 8
-		#
-		# Add End themed dungeon to End biomes outside the Enderdragon island.
-		# How often dungeons will attempt to spawn per chunk.
-		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
-		#Range: 0 ~ 1000
-		endDungeonSpawnrate = 8
-		#
-		# Add Nether themed dungeon to Nether biomes.
-		# How often dungeons will attempt to spawn per chunk.
-		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
-		#Range: 0 ~ 1000
-		netherDungeonSpawnrate = 8
+		jungleDungeonAttemptsPerChunk = 8
 		#
 		# Replace vanilla dungeon in Mushroom biomes with Mushroom themed dungeon.
 		# How often dungeons will attempt to spawn per chunk.
 		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
 		# Note: Vanilla Dungeons will spawn again when this is set to 0.
 		#Range: 0 ~ 1000
-		mushroomDungeonSpawnrate = 8
-		#
-		# Replace vanilla dungeon in Desert biomes with Desert themed dungeon.
-		# How often dungeons will attempt to spawn per chunk.
-		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
-		# Note: Vanilla Dungeons will spawn again when this is set to 0.
-		#Range: 0 ~ 1000
-		desertDungeonSpawnrate = 8
-		#
-		# Replace vanilla dungeon in icy/snow biomes with icy/snow themed dungeon.
-		# How often dungeons will attempt to spawn per chunk.
-		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
-		# Note: Vanilla Dungeons will spawn again when this is set to 0.
-		#Range: 0 ~ 1000
-		snowDungeonSpawnrate = 8
-		#
-		# Replace vanilla dungeon in Swamp biomes with Swamp themed dungeon.
-		# How often dungeons will attempt to spawn per chunk.
-		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
-		# Note: Vanilla Dungeons will spawn again when this is set to 0.
-		#Range: 0 ~ 1000
-		swampDungeonSpawnrate = 8
-		#
-		# Replace vanilla dungeon in Badlands biomes with Badlands themed dungeon.
-		# How often dungeons will attempt to spawn per chunk.
-		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
-		# Note: Vanilla Dungeons will spawn again when this is set to 0.
-		#Range: 0 ~ 1000
-		badlandsDungeonSpawnrate = 8
-		#
-		# Add ocean themed dungeon to ocean biomes. These will spawn on
-		# the ocean's floor and inside water filled caves and ravines.
-		#
-		# How often dungeons will attempt to spawn per chunk.
-		#  0 for no dungeons at all and 1000 for max dungeon spawnrate.
-		#
-		# Note: Vanilla Dungeons will still generate if the biome has 
-		# them which is unlike the other modded dungeons from this mod
-		# as those would normally replace the Vanilla Dungeons.
-		#Range: 0 ~ 1000
-		oceanDungeonSpawnrate = 6
+		mushroomDungeonAttemptsPerChunk = 8
 		#
 		# Replace vanilla dungeon in Dark Forest biomes with Dark Forest themed dungeon.
 		# How often dungeons will attempt to spawn per chunk.
 		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
 		# Note: Vanilla Dungeons will spawn again when this is set to 0.
 		#Range: 0 ~ 1000
-		darkForestDungeonSpawnrate = 8
+		darkForestDungeonAttemptsPerChunk = 8
+		#
+		# Replace vanilla dungeon in Desert biomes with Desert themed dungeon.
+		# How often dungeons will attempt to spawn per chunk.
+		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
+		# Note: Vanilla Dungeons will spawn again when this is set to 0.
+		#Range: 0 ~ 1000
+		desertDungeonAttemptsPerChunk = 8
+		#
+		# Replace vanilla dungeon in icy/snow biomes with icy/snow themed dungeon.
+		# How often dungeons will attempt to spawn per chunk.
+		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
+		# Note: Vanilla Dungeons will spawn again when this is set to 0.
+		#Range: 0 ~ 1000
+		snowDungeonAttemptsPerChunk = 8
+		#
+		# Replace vanilla dungeon in Badlands biomes with Badlands themed dungeon.
+		# How often dungeons will attempt to spawn per chunk.
+		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
+		# Note: Vanilla Dungeons will spawn again when this is set to 0.
+		#Range: 0 ~ 1000
+		badlandsDungeonAttemptsPerChunk = 8
+		#
+		# Add ocean themed dungeon to ocean biomes. These will spawn on
+		# the ocean's floor and inside water filled caves and ravines.
+		#
+		# How often dungeons will attempt to spawn per chunk.
+		#  0 for no dungeons at all and 1000 for max Dungeon spawnrate.
+		#
+		# Note: Vanilla Dungeons will still generate if the biome has 
+		# them which is unlike the other modded dungeons from this mod
+		# as those would normally replace the Vanilla Dungeons.
+		#Range: 0 ~ 1000
+		oceanDungeonAttemptsPerChunk = 6
+		#
+		# Add End themed dungeon to End biomes outside the Enderdragon island.
+		# How often dungeons will attempt to spawn per chunk.
+		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
+		#Range: 0 ~ 1000
+		endDungeonAttemptsPerChunk = 8
+		#
+		# Add Nether themed dungeon to Nether biomes.
+		# How often dungeons will attempt to spawn per chunk.
+		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
+		#Range: 0 ~ 1000
+		netherDungeonAttemptsPerChunk = 8
+		#
+		# Replace vanilla dungeon in Swamp biomes with Swamp themed dungeon.
+		# How often dungeons will attempt to spawn per chunk.
+		#  0 for no Dungeons at all and 1000 for max Dungeon spawnrate.
+		# Note: Vanilla Dungeons will spawn again when this is set to 0.
+		#Range: 0 ~ 1000
+		swampDungeonAttemptsPerChunk = 8
 
