--- a/src/config/repurposed_structures-outposts.toml
+++ b/src/config/repurposed_structures-outposts.toml
@@ -6,29 +6,78 @@
 blacklistedOutpostBiomes = ""
 
 [Outposts]
-	#
-	# How rare are Nether Brick Outposts in non-warped Nether biomes.
-	# 1 for spawning in most chunks and 1001 for none.
-	addNetherBrickOutpostToModdedBiomes = true
+	#Add Jungle Outposts to modded Jungle biomes.
+	addOutpostJungleToModdedBiomes = true
 	#
 	# How rare are Warped Outposts in Warped Nether biomes.
 	# 1 for spawning in most chunks and 1001 for none.
 	addWarpedOutpostToModdedBiomes = true
 	#
+	# Add Warped Outposts to modded Nether Warped biomes.
+	#Range: 1 ~ 1001
+	warpedOutpostMaxChunkDistance = 34
+	#
 	# Add Crimson Outposts to modded Nether Warped biomes.
 	#Range: 1 ~ 1001
-	crimsonOutpostSpawnrate = 34
+	crimsonOutpostMaxChunkDistance = 34
+	#Add Snowy Outposts to modded snowy biomes.
+	addOutpostSnowyToModdedBiomes = true
+	#Add Desert Outposts to modded Desert biomes.
+	addOutpostDesertToModdedBiomes = true
+	#Add Badlands Outposts to modded Badlands biomes.
+	addOutpostBadlandsToModdedBiomes = true
+	#Add Birch Outposts to modded Birch biomes.
+	addOutpostBirchToModdedBiomes = true
 	#
 	# Add Nether Brick Outposts to modded Nether biomes
 	# that other nether outposts don't fit in.
 	#Range: 1 ~ 1001
-	netherBrickOutpostSpawnrate = 34
-	#
-	# Add Warped Outposts to modded Nether Warped biomes.
-	#Range: 1 ~ 1001
-	warpedOutpostSpawnrate = 34
+	netherBrickOutpostMaxChunkDistance = 34
 	#
 	# How rare are Crimson Outposts in Warped Nether biomes.
 	# 1 for spawning in most chunks and 1001 for none.
 	addCrimsonOutpostToModdedBiomes = true
+	#
+	# How rare are Nether Brick Outposts in non-warped Nether biomes.
+	# 1 for spawning in most chunks and 1001 for none.
+	addNetherBrickOutpostToModdedBiomes = true
+	#Add Giant Tree Taiga Outposts to modded Giant Tree Taiga biomes.
+	addOutpostGiantTreeTaigaToModdedBiomes = true
+	#How rare are Badlands Outposts in Badlands
+	#biomes. 1 for spawning in most chunks and
+	#1001 for none.
+	#Range: 1 ~ 1001
+	outpostBadlandsMaxChunkDistance = 37
+	#How rare are Jungle Outposts in Jungle
+	#biomes. 1 for spawning in most chunks and
+	#1001 for none.
+	#Range: 1 ~ 1001
+	outpostJungleMaxChunkDistance = 39
+	#How rare are Snowy Outposts in snowy
+	#biomes. 1 for spawning in most chunks and
+	#1001 for none.
+	#Range: 1 ~ 1001
+	outpostSnowyMaxChunkDistance = 39
+	#Add Icy Outposts to modded icy/extremely
+	#cold biomes.
+	addOutpostIcyToModdedBiomes = true
+	#How rare are Birch Outposts in Birch Forest
+	#biomes. 1 for spawning in most chunks and 1001
+	#for none.
+	#Range: 1 ~ 1001
+	outpostBirchMaxChunkDistance = 39
+	#How rare are Icy Outposts in icy/extremely
+	#cold biomes. 1 for spawning in most chunks
+	#and 1001 for none.
+	#Range: 1 ~ 1001
+	outpostIcyMaxChunkDistance = 37
+	#How rare are Giant Tree Taiga Outposts in Giant Tree Taiga
+	#biomes. 1 for spawning in most chunks and 1001 for none.
+	#Range: 1 ~ 1001
+	outpostGiantTreeTaigaMaxChunkDistance = 37
+	#How rare are Desert Outposts in Desert
+	#biomes. 1 for spawning in most chunks and
+	#1001 for none.
+	#Range: 1 ~ 1001
+	outpostDesertMaxChunkDistance = 39
 
