--- a/src/config/artifacts-common.toml
+++ b/src/config/artifacts-common.toml
@@ -1,11 +1,13 @@
 
+#To disable items or to change the frequency at which artifacts appear, override the loot tables from this mod with a datapack
+#Cosmetic slots are disabled by default, they can be enabled using the Curios config, see https://github.com/TheIllusiveC4/Curios/wiki/How-to-Use:-Users#creating-a-new-slot-type
 [campsite]
 	#Probability for an ore vein to generate underneath a campsite
 	#Range: 0 ~ 100
 	campsite_ore_chance = 25
 	#The minimum y-level at which a campsite can generate
-	#Range: 0 ~ 255
-	campsite_min_y = 0
+	#Range: 1 ~ 255
+	campsite_min_y = 1
 	#The maximum y-level at which a campsite can generate
 	#Range: 0 ~ 255
 	campsite_max_y = 45
