--- a/src/config/jei/ingredient-list-mod-sort-order.ini
+++ b/src/config/jei/ingredient-list-mod-sort-order.ini
@@ -34,7 +34,6 @@ Artifacts
 Better Shields
 Comforts
 Mining Helmet
-Oh The Biomes You'll Go
 Dungeons Gear
 Enchant With Mob
 Gateways To Eternity
@@ -42,3 +41,12 @@ Wither Skeleton Tweaks
 Chunk Loaders
 Froglins
 Pandemic
+MeatyOres
+Click Machine
+Crafting Station
+Paraglider
+Scannable
+Valhelsia Structures
+Oh The Biomes You'll Go
+Hallzmine's City Blocks
+Serene Seasons
