fix: missing changes for 1.0.3

--- a/src/config/pandemic-common.toml
+++ b/src/config/pandemic-common.toml
@@ -1,6 +1,6 @@
 #Define the entity types that should apply the disease on hit. List of all known Types: (minecraft:area_effect_cloud, minecraft:armor_stand, minecraft:arrow, minecraft:bat, minecraft:bee, minecraft:blaze, minecraft:boat, minecraft:cat, minecraft:cave_spider, minecraft:chicken, minecraft:cod, minecraft:cow, minecraft:creeper, minecraft:dolphin, minecraft:donkey, minecraft:dragon_fireball, minecraft:drowned, minecraft:elder_guardian, minecraft:end_crystal, minecraft:ender_dragon, minecraft:enderman, minecraft:endermite, minecraft:evoker, minecraft:evoker_fangs, minecraft:experience_orb, minecraft:eye_of_ender, minecraft:falling_block, minecraft:firework_rocket, minecraft:fox, minecraft:ghast, minecraft:giant, minecraft:guardian, minecraft:hoglin, minecraft:horse, minecraft:husk, minecraft:illusioner, minecraft:iron_golem, minecraft:item, minecraft:item_frame, minecraft:fireball, minecraft:leash_knot, minecraft:lightning_bolt, minecraft:llama, minecraft:llama_spit, minecraft:magma_cube, minecraft:minecart, minecraft:chest_minecart, minecraft:command_block_minecart, minecraft:furnace_minecart, minecraft:hopper_minecart, minecraft:spawner_minecart, minecraft:tnt_minecart, minecraft:mule, minecraft:mooshroom, minecraft:ocelot, minecraft:painting, minecraft:panda, minecraft:parrot, minecraft:phantom, minecraft:pig, minecraft:piglin, minecraft:piglin_brute, minecraft:pillager, minecraft:polar_bear, minecraft:tnt, minecraft:pufferfish, minecraft:rabbit, minecraft:ravager, minecraft:salmon, minecraft:sheep, minecraft:shulker, minecraft:shulker_bullet, minecraft:silverfish, minecraft:skeleton, minecraft:skeleton_horse, minecraft:slime, minecraft:small_fireball, minecraft:snow_golem, minecraft:snowball, minecraft:spectral_arrow, minecraft:spider, minecraft:squid, minecraft:stray, minecraft:strider, minecraft:egg, minecraft:ender_pearl, minecraft:experience_bottle, minecraft:potion, minecraft:trident, minecraft:trader_llama, minecraft:tropical_fish, minecraft:turtle, minecraft:vex, minecraft:villager, minecraft:vindicator, minecraft:wandering_trader, minecraft:witch, minecraft:wither, minecraft:wither_skeleton, minecraft:wither_skull, minecraft:wolf, minecraft:zoglin, minecraft:zombie, minecraft:zombie_horse, minecraft:zombie_villager, minecraft:zombified_piglin)
 entities = ["minecraft:bee", "minecraft:blaze", "minecraft:cave_spider", "minecraft:creeper", "minecraft:drowned", "minecraft:elder_guardian", "minecraft:ender_dragon", "minecraft:enderman", "minecraft:endermite", "minecraft:evoker", "minecraft:ghast", "minecraft:giant", "minecraft:guardian", "minecraft:hoglin", "minecraft:husk", "minecraft:illusioner", "minecraft:iron_golem", "minecraft:lightning_bolt", "minecraft:llama", "minecraft:magma_cube", "minecraft:panda", "minecraft:phantom", "minecraft:piglin", "minecraft:piglin_brute", "minecraft:pillager", "minecraft:polar_bear", "minecraft:pufferfish", "minecraft:rabbit", "minecraft:ravager", "minecraft:shulker", "minecraft:silverfish", "minecraft:skeleton", "minecraft:slime", "minecraft:spider", "minecraft:stray", "minecraft:strider", "minecraft:trader_llama", "minecraft:vex", "minecraft:villager", "minecraft:vindicator", "minecraft:wandering_trader", "minecraft:witch", "minecraft:wither", "minecraft:wither_skeleton", "minecraft:wolf", "minecraft:zoglin", "minecraft:zombie", "minecraft:zombie_villager", "minecraft:zombified_piglin", "goopers:gooper", "hornets:hornet"]
-#Defines the chance on hit if the disease should be applied. 0 = 0%, 1 = 100% chance
+#Defines the chance on hit if the disease should be applied. !!This means if the mob attacking you HAS NO DISEASE!! 0 = 0%, 1 = 100% chance
 #Range: 0.0 ~ 1.0
 applyChance = 0.02
 #Defines the maximum radius in which blocks might get placed.
@@ -14,4 +14,16 @@ chancePerTick = 0.01
 tickDelay = 40
 #Define the blocks it'll place at random. Each entry is weighted the same. Block will be randomly chosen.
 placeableBlocks = ["diregoo:gooblock", "diregoo:gooblockterrain"]
+#Defines the chance on hit if the disease should be applied. !!This means if the mob attacking you HAS THE DISEASE!! 0 = 0%, 1 = 100% chance
+#Range: 0.0 ~ 1.0
+applyChanceDisease = 0.75
+#Defines the chance that a mob will spawn with GooVID-20 when it gets spawned. 0 = 0%, 1 = 100% chance
+#Range: 0.0 ~ 1.0
+applySpawnChance = 0.2
+#Defines the radius in blocks (spherically) that a mob or player will spread GooVID-20 to others nearby.
+#Range: 0.0 ~ 16.0
+spreadRadius = 2.5
+#Defines the chance that a mob will spread GooVID-20 to others nearby per second (20 ticks). 0 = 0%, 1 = 100% chance
+#Range: 0.0 ~ 1.0
+spreadSecondChance = 0.05
 
