chore: remove journeymap extras from version control

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,11 @@ src/config/worldstripper-common.toml
 # These are ones we feel the user should be customizing, not us.
 src/config/jei/bookmarks.ini
 
+# Journeymap
+# Configs/etc in journeymap that are not necessary to be version controlled
+src/journeymap/data/*
+src/journeymap/server/*
+src/journeymap/journeymap.log
+
 # Mod Junk
 src/config/byg/README.txt
