Added locks, storage racks mods, updated configs, etc

--- a/src/config/jei/blacklist.cfg
+++ b/src/config/jei/blacklist.cfg
@@ -145,3 +145,4 @@ piggybankmod:heartstealer
 piggybankmod:hawkbrand
 piggybankmod:the_monkey_motivator
 piggybankmod:golden_banana
+locks:steel_lock_pick
