--- a/src/config/jei/recipe-category-sort-order.ini
+++ b/src/config/jei/recipe-category-sort-order.ini
@@ -81,7 +81,6 @@ create:automatic_packing
 create:automatic_shaped
 create:automatic_shapeless
 create:block_cutting
-create:blockzapper_upgrade
 create:crushing
 create:draining
 create:fan_blasting
@@ -99,3 +98,5 @@ create:spout_filling
 create:wood_cutting
 jea:advancement
 tconstruct:part_builder
+create:deploying
+create:sequenced_assembly
