--- a/src/config/treeharvester-common.toml
+++ b/src/config/treeharvester-common.toml
@@ -5,7 +5,7 @@
 	#If enabled, players' exhaustion level increases 0.005 per harvested log (Minecraft's default per broken block).
 	increaseExhaustionPerHarvestedLog = true
 	#If enabled, automatically replaces the sapling from the drops when the bottom log is broken and the player is not holding the sneak button.
-	replaceSaplingIfBottomLogIsBroken = true
+	replaceSaplingIfBottomLogIsBroken = false
 	#If enabled, tree harvesting works when not holding the sneak button. If disabled it's reversed, and only works when sneaking.
 	treeHarvestWithoutSneak = false
 	#If enabled, the leaves around a broken tree will quickly disappear. Only works with 'instantBreakLeavesAround' disabled.
