--- a/src/journeymap/config/5.7/journeymap.minimap.config
+++ b/src/journeymap/config/5.7/journeymap.minimap.config
@@ -6,32 +6,38 @@
   "systemTimeRealFormat": "HH:mm:ss",
   "enabled": "true",
   "shape": "Square",
-  "position": "TopRight",
+  "position": "Custom",
   "showDayNight": "false",
-  "info1Label": "Blank",
+  "info1Label": "FPS",
   "info2Label": "Blank",
   "info3Label": "Location",
-  "info4Label": "Biome",
-  "sizePercent": "30",
+  "info4Label": "GameTime",
+  "positionX": "919",
+  "positionY": "278",
+  "sizePercent": "29",
   "frameAlpha": "100",
   "terrainAlpha": "100",
+  "backgroundAlpha": "0.8",
   "orientation": "North",
-  "compassFontScale": "2",
+  "compassFontScale": "2.0",
   "showCompass": "true",
   "showReticle": "true",
   "reticleOrientation": "Compass",
   "active": true,
-  "playerDisplay": "SmallDots",
+  "playerDisplay": "LargeDots",
+  "playerDisplayScale": "0.5",
   "showPlayerHeading": "true",
-  "mobDisplay": "SmallDots",
+  "mobDisplay": "LargeDots",
+  "mobDisplayScale": "0.5",
   "showMobHeading": "true",
   "showMobs": "true",
   "showAnimals": "true",
   "showVillagers": "true",
   "showPets": "true",
   "showPlayers": "true",
-  "fontScale": "2",
+  "fontScale": "2.0",
   "showWaypointLabels": "true",
+  "waypointLabelScale": "1.0",
   "locationFormatVerbose": "true",
   "locationFormat": "xzyv",
   "showWaypoints": "true",
@@ -41,5 +47,5 @@
   "showEntityNames": "true",
   "preferredMapType": "day",
   "zoomLevel": "0",
-  "configVersion": "5.7.1b1"
+  "configVersion": "5.7.3"
 }
