--- a/src/journeymap/config/5.7/journeymap.core.config
+++ b/src/journeymap/config/5.7/journeymap.core.config
@@ -27,10 +27,10 @@
   "mapBlendFoliage": "true",
   "mapBlendWater": "false",
   "mapSurfaceAboveCaves": "true",
-  "renderDistanceCaveMax": "3",
-  "renderDistanceSurfaceMax": "7",
+  "renderDistanceCaveMax": "2",
+  "renderDistanceSurfaceMax": "2",
   "renderDelay": "2",
-  "revealShape": "Circle",
+  "revealShape": "Square",
   "alwaysMapCaves": "false",
   "alwaysMapSurface": "false",
   "tileHighDisplayQuality": "true",
@@ -39,14 +39,15 @@
   "maxPlayersData": "32",
   "maxVillagersData": "32",
   "hideSneakingEntities": "true",
+  "hideSpectators": "false",
   "radarLateralDistance": "64",
   "radarVerticalDistance": "16",
   "tileRenderType": "1",
   "mappingEnabled": "true",
   "renderOverlayEventTypeName": "ALL",
   "renderOverlayPreEvent": "true",
-  "optionsManagerViewed": "5.7.1b1",
-  "splashViewed": "5.7.1b1",
+  "optionsManagerViewed": "5.7.3",
+  "splashViewed": "5.7.3",
   "gridSpecs": {
     "day": "Squares,#808080,0.5,-1,-1",
     "night": "Squares,#8080ff,0.3,-1,-1",
@@ -59,5 +60,5 @@
   "colorPlayer": "#ffffff",
   "colorSelf": "#0000ff",
   "verboseColorPalette": "false",
-  "configVersion": "5.7.1b1"
+  "configVersion": "5.7.3"
 }
