--- a/src/journeymap/config/5.7/journeymap.waypoint.config
+++ b/src/journeymap/config/5.7/journeymap.waypoint.config
@@ -10,8 +10,9 @@
   "showName": "true",
   "showDistance": "true",
   "autoHideLabel": "true",
+  "showDeviationLabel": "false",
   "boldLabel": "false",
-  "fontScale": "2",
+  "fontScale": "2.0",
   "textureSmall": "true",
   "maxDistance": "0",
   "minDistance": "4",
@@ -19,8 +20,10 @@
   "autoRemoveDeathpoints": "false",
   "autoRemoveDeathpointDistance": "2",
   "showDeathpointlabel": "true",
+  "fullscreenDoubleClickToCreate": "true",
   "teleportCommand": "/tp {name} {x} {y} {z}",
   "dateFormat": "MM-dd-yyyy",
   "timeFormat": "HH:mm:ss",
-  "configVersion": "5.7.1b1"
+  "managerDimensionFocus": "false",
+  "configVersion": "5.7.3"
 }
